# ops-manager

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  app_version.py  auth.py  auth_advanced.py  backup_evidence_report.json  backup_evidence_report.py  backup_pdf_report.py  pyproject.toml  requirements.txt  setup_authorized_users_table.sql  slack_notifications.py  stop_dev_environment.py
.github/instructions/: auth.instructions.md  general.instructions.md
.streamlit/: config.toml
pages/: __init__.py  backup.py  manage_users.py
