[project]
name = "ops-manager"
version = "0.2.0"
description = "Streamlit application for operations management"
authors = [
    {name = "Luiz Gustavo Gavinho",email = "lgavinho@midiacode.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "boto3 (>=1.38.18,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "supabase (>=2.4.1,<3.0.0)",
    "reportlab (>=4.4.10,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ops-manager"
version = "0.1.1"
description = "Streamlit application for operations management"
authors = ["Luiz Gustavo Gavinho <lgavinho@midiacode.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = ">=1.45.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.5,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
requests = ">=2.32.3,<3.0.0"
boto3 = ">=1.38.18,<2.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
supabase = ">=2.4.1,<3.0.0"
